objects/SMAX_PS_Install_Request__c.object
<CustomObject>
    <label>Install Request</label>
    <nameField>
        <label>Install Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Install Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SMAX_PS_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>On-Hold</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Install Requests</relationshipLabel>
        <relationshipName>Install_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact Number</description>
        <inlineHelpText>Contact Number</inlineHelpText>
        <label>Contact Number</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Install Requests</relationshipLabel>
        <relationshipName>Install_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Install Requests</relationshipLabel>
        <relationshipName>Install_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Install Requests</relationshipLabel>
        <relationshipName>Install_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_WorkOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Install Requests</relationshipLabel>
        <relationshipName>Install_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ContactName__c</fullName>
        <description>Contact Name</description>
        <inlineHelpText>Contact Name</inlineHelpText>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_External_Id__c</fullName>
        <description>Unique External Id for this Install Request.  Should be populated with:
SalesOrderNumber-LineNumber-EquipmentNumber</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique External Id for this Install Request.  Should be populated with:
SalesOrderNumber-LineNumber-EquipmentNumber</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SMAX_PS_InstallType__c</fullName>
        <label>Install Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>INSTALLATION</fullName>
                </value>
                <value>
                    <fullName>PHONE</fullName>
                </value>
                <value>
                    <fullName>PIV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_ContactEmail__c</fullName>
        <description>Contact Email</description>
        <inlineHelpText>Contact Email</inlineHelpText>
        <label>Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ContactPhone__c</fullName>
        <description>Contact Phone</description>
        <inlineHelpText>Contact Phone</inlineHelpText>
        <label>Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Account_ExtId__c</fullName>
        <label>Account External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Contact_ExtId__c</fullName>
        <label>Contact External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Error_Message__c</fullName>
        <description>Error message encountered when trying to generate Work Order.</description>
        <inlineHelpText>Error message encountered when trying to generate Work Order.</inlineHelpText>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ProductSeries__c</fullName>
        <description>Product Series</description>
        <inlineHelpText>Product Series</inlineHelpText>
        <label>Product Series</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product_ExtId__c</fullName>
        <label>Product External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_DeliveryNumber__c</fullName>
        <label>Delivery Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Location_ExtId__c</fullName>
        <label>Location External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_InstalledProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installed Product</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Install Requests</relationshipLabel>
        <relationshipName>Install_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SalesOrderNumber__c</fullName>
        <description>Sales Order Number</description>
        <inlineHelpText>Sales Order Number</inlineHelpText>
        <label>Sales Order Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_TechnicianAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Technician Account</description>
        <inlineHelpText>Technician Account</inlineHelpText>
        <label>Technician Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Install Requests (Technician Account)</relationshipLabel>
        <relationshipName>Install_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SalesOrderLineNumber__c</fullName>
        <description>Sales Order Line Number</description>
        <inlineHelpText>Sales Order Line Number</inlineHelpText>
        <label>Sales Order Line Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_InstalledProduct_ExtId__c</fullName>
        <label>Installed Product External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SalesOrderLinesDescription__c</fullName>
        <description>Sales Order Lines Description</description>
        <inlineHelpText>Sales Order Lines Description</inlineHelpText>
        <label>Sales Order Lines Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>